# monaco_paie

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_DECISION_GUIDE.md  DEPLOYMENT_QUICK.md  Dockerfile  ENTERPRISE_DEPLOYMENT.md  OPTIMIZATION_SUMMARY.md  PAYROLL_CALCULATION_ANALYSIS.md  README.md  app.py  app_backup.py  deployment_guide.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  test_payroll_verification.py  test_webapp.py  test_webapp_simple.py
.claude/: CLAUDE.md
.streamlit/: config.toml
claude_output/: monaco-main-integrated-app2.py  monaco-oauth2-integration.py  monaco-paystub-app-2.py  monaco-paystub-app.py
config/: acc_rem.xlsx  company_info.json  payroll_rates.csv
data/: payroll.duckdb  payroll.duckdb.wal  test_employees_august_2025.xlsx  u_creation.ipynb  users.parquet
examples/: exempleV2.xml
pages/: 1_📊_Dashboard.py  1_📥_Import.py  2_⚙️_Traitement.py  2_📊_Tableau.py  2_📥_Import.py  3_⚙️_Processing.py  3_⚙️_Traitement.py  4_✅_Validation.py  4_📊_Tableau.py  5_📄_PDF_Generation.py  5_📄_PDFs.py  6_📋_DSM.py  6_📤_Export.py  7_⚙️_Config.py  7_📤_Export.py  7_📧_Email.py  8_⚙️_Config.py  8_📤_Export.py  9_⚙️_Config.py  shared_utils.py
plans/: AUDIT_LOGGING.md  HYBRID_OPTIMIZATION.md  MAC_MINI_DEPLOYMENT.md  TESTING_ACCESS.md  deploy.sh
services/: auth.py  data_mgt.py  edge_case_agent.py  email_archive.py  import_export.py  oauth2_integration.py  payroll_calculations.py  payroll_system.py  payslip_helpers.py  pdf_generation.py  scheduler.py  shared_utils.py
test_results/: TEST_REPORT.md
(+19 files in other folders)
