[project]
name = "monaco-paie"
version = "0.1.0"
description = "Système de gestion de paie pour Monaco"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "FMB", email = "fmbrych@gmail.com"}
]
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "bcrypt>=4.1.0",
    "msal>=1.26.0",
    "authlib>=1.3.0",
    "duckdb>=0.9.0",
]
[project.optional-dependencies]
dev = [
"pytest>=7.4.0",
"black>=23.0.0",
"ruff>=0.1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["services"]
[tool.black]
line-length = 100
target-version = ["py310"]
[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
